Allow Creation of New Groups
This adds the needed APIs and UIs so that we can create new message
groups and that we can select these message groups
